# CppProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bs.py  clang-format  clang-tidy
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake
src/: CMakeLists.txt  define.hpp  ops.cpp  ops.hpp
test/: CMakeLists.txt  test_ops.cpp
